# flying-bird

./: Cargo.toml  README.md  flying-bird-35cb9971c6bb11f9.js  flying-bird-35cb9971c6bb11f9_bg.wasm  flying-bird-364d0e14a058e625.js  flying-bird-364d0e14a058e625_bg.wasm  flying-bird-3eae89f75e32219c.js  flying-bird-3eae89f75e32219c_bg.wasm  flying-bird-477fc94f2233a76a.js  flying-bird-477fc94f2233a76a_bg.wasm  flying-bird-49aca77830ee0980.js  flying-bird-49aca77830ee0980_bg.wasm  flying-bird-5d9f63822f68514e.js  flying-bird-5d9f63822f68514e_bg.wasm  flying-bird-7cf1889dcd2415e3.js  flying-bird-7cf1889dcd2415e3_bg.wasm  flying-bird-8f93d8754e83c99c.js  flying-bird-8f93d8754e83c99c_bg.wasm  flying-bird-93ae0d144b243205.js  flying-bird-93ae0d144b243205_bg.wasm  flying-bird-976458113f16a126.js  flying-bird-976458113f16a126_bg.wasm  flying-bird-afc3331183ee47ab.js  flying-bird-afc3331183ee47ab_bg.wasm  flying-bird-d692a9e12511b376.js  flying-bird-d692a9e12511b376_bg.wasm  flying-bird-d85a9c51c41f7295.js  flying-bird-d85a9c51c41f7295_bg.wasm  flying-bird-ea88a3c828e8eaf6.js  flying-bird-ea88a3c828e8eaf6_bg.wasm  flying-bird-f7950e80a3e7cca5.js  flying-bird-f7950e80a3e7cca5_bg.wasm  index.html  main-20e676da7757d018.css  main-272afd6b270f2f66.css  main-39b2dc1355329bf4.css  main-4c8bf11f3ff68a39.css  main-5bbd5bddc13bccc1.css  main-66a866a05a636927.css  main-d8643e7f120d32fd.css  (+3 more)
.github/workflows/: deploy.yml
src/: main.rs
