[package]
name = "flying-bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.21", features = ["csr"] }
web-sys = { version="0.3.66", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement", "Window"] }
wasm-bindgen = "0.2.89"
yew-hooks = "0.3.0"
